@@ -2,7 +2,7 @@ sdparm (1.07-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 15 Oct 2011 11:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 25 Oct 2011 11:00:00 -0400
 
 sdparm (1.06-1) unstable; urgency=low
 
