@@ -2,7 +2,7 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.07 [20111017] [svn: r183]
+ChangeLog for sdparm-1.07 [20111025] [svn: r184]
   - point out some mode page numbers are vendor specific
   - LB provisioning + Block limits VPD pages to sbc3r27
   - Enhanced phy control page: optical mode enabled (spl-r07)
@@ -10,6 +10,7 @@ ChangeLog for sdparm-1.07 [20111017] [svn: r183]
   - sync with spc4r31+32 (handle status good with sense)
   - extented inquiry VPD: add POA_SUP, HRA_SUP and VSA_SUP
   - application tag mode page subcode 0xf0->0x2 (sbc3r28)
+  - add 'sinq' pseudo VPD page for standard inquiry response
 
 ChangeLog for sdparm-1.06 [20101031] [svn: r166]
   - allow upper and lower case in field, (mode and vpd) page,
